--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#0c0c08">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -11,7 +12,7 @@
     rel="stylesheet"
   >
   <link rel="stylesheet" href="./index.css">
-  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>hacksparr0w</title>
 </head>
 <body>
