--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <a href="https://twitter.com/muni_cz">@muni_cz</a>.
       Previously, I worked as a software developer for various internet
       companies such as
-      <a href="twitter.com/seznam_cz">@seznam_cz</a>
+      <a href="https://twitter.com/seznam_cz">@seznam_cz</a>
       and helped building technological startups like
       <a href="https://twitter.com/cargotic_tech">@cargotic_tech</a>.
       I regularly contribute to open-source projects as
-      <a href="github.com/hacksparr0w">@hacksparr0w</a>.
+      <a href="https://github.com/hacksparr0w">@hacksparr0w</a>.
     </p>
     <p class="ghost">
       I'm interested in solving hard engineering problems with
