--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       and helped building technological startups like
       <a href="https://twitter.com/cargotic_tech">@cargotic_tech</a>.
       I regularly contribute to open-source projects as
-      <a href="https://github.com/hacksparr0w">@hacksparr0w</a>.
+      <a href="https://github.com/hacksparr0w">@hacksparr0w</a>. I also do
+      software architecture consulting.
     </p>
     <p class="ghost">
       I'm interested in solving hard engineering problems with
