--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="https://twitter.com/cargotic_tech">@cargotic_tech</a>.
       I regularly contribute to open-source projects as
       <a href="https://github.com/hacksparr0w">@hacksparr0w</a>. I also do
-      software architecture consulting.
+      software architecture and security consulting.
     </p>
     <p class="ghost">
       I'm interested in solving hard engineering problems with
